# chess-app

./: ENGINE_WORKFLOW.md  LICENSE  README.md  REFACTOR_SUMMARY.md
.github/: CODEOWNERS
.github/workflows/: doctor.yml  jest.yml  lint.yml  typecheck.yml
App/: NATIVE_MODULE_SETUP.md  app.json  eslint.config.js  jest.config.js  package-lock.json  package.json  setup-native.sh  sync-engine.sh
App/app/: +not-found.tsx  _layout.tsx  settings.tsx
App/app/(tabs)/: _layout.tsx  index.tsx
App/app/(tabs)/home/: _layout.tsx  game.tsx  index.tsx  setup.tsx
App/app/(tabs)/sandbox/: _layout.tsx  index.tsx  performance-test.tsx
App/assets/wasm/: chess_engine.js  chess_engine.wasm  chess_engine.wasm.base64
App/components/: ChessBoard.tsx
App/constants/: theme.ts
App/contexts/: SettingsContext.tsx
App/lib/chess/: ChessEngine.ts  ChessEngineNative.ts  SearchTypes.ts  index.ts  types.ts
App/lib/chess/__tests__/: iterative-deepening.test.ts
App/modules/chess-engine/: .gitignore  README.md  expo-module.config.json  index.ts  package.json  tsconfig.json
App/modules/chess-engine/android/: build.gradle
App/modules/chess-engine/android/src/main/java/expo/modules/chessengine/: ChessEngineModule.kt
App/modules/chess-engine/android/src/main/jni/: CMakeLists.txt  chess-engine.cpp
App/modules/chess-engine/ios/: Board.cpp  Board.h  ChessEngine.cpp  ChessEngine.h  ChessEngine.podspec  ChessEngineModule.swift  ChessEngineWrapper.h  ChessEngineWrapper.mm  Move.cpp  Move.h  Types.h
App/modules/chess-engine/ios/Core/: Board.h  ChessEngine.cpp  ChessEngine.h  Move.h  Types.h
App/modules/chess-engine/ios/v1/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h
App/modules/chess-engine/ios/v2/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h
App/modules/chess-engine/src/: ChessEngineModule.ts
engine/: .gitignore  CMakeLists.txt  README.md
engine/Core/: Board.cpp  ChessEngine.cpp  ChessEngine.h  Move.cpp
engine/bindings/: emscripten_bindings.cpp
engine/test/: main.cpp
engine/v1/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h
engine/v2/: Evaluation.cpp  Evaluation.h  Search.cpp  Search.h
